GTK+-3.20 contrast high: fix scrollbars

--- a/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
@@ -1604,11 +1604,20 @@ scrollbar {
   background-image: none;
   border-style: solid;
   -GtkScrollbar-has-backward-stepper: false;
-  -GtkScrollbar-has-forward-stepper: false;
-  -GtkRange-slider-width: 20;
-  -GtkScrollbar-min-slider-length: 42; }
+  -GtkScrollbar-has-forward-stepper: false }
   scrollbar button {
     border: none; }
+
+scrollbar slider {
+    min-width: 6px;
+    min-height: 64px;
+}
+
+scrollbar.horizontal slider {
+    min-height: 6px;
+    min-width: 64px;
+}
+
   scrollbar slider {
     border-radius: 20px;
     border: 5px solid transparent;
@@ -1623,25 +1632,6 @@ scrollbar {
       border-width: 8px; }
       scrollbar slider.fine-tune:hover:active {
         background-color: #000; }
-  scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
-    opacity: 0.4;
-    -GtkRange-slider-width: 5px; }
-    scrollbar.overlay-indicator:not(.dragging):not(.hovering) slider {
-      margin: 0;
-      background-color: #000;
-      border: 1px solid white;
-      background-clip: padding-box; }
-    scrollbar.overlay-indicator:not(.dragging):not(.hovering) trough {
-      border-style: none;
-      background-color: transparent; }
-    scrollbar.overlay-indicator:not(.dragging):not(.hovering).vertical slider {
-      margin-top: 2px;
-      margin-bottom: 2px; }
-    scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal slider {
-      margin-left: 2px;
-      margin-right: 2px; }
-  scrollbar.overlay-indicator.dragging, scrollbar.overlay-indicator.hovering {
-    opacity: 0.7; }
 
 /**********
  * Switch *
